--- a/styles/Input.css
+++ b/styles/Input.css
@@ -28,18 +28,21 @@
   border-color: red;
 }
 
-input::placeholder {
+input::placeholder,
+textarea::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: rgb(209 213 219) !important;
   opacity: 1 !important; /* Firefox */
 }
 
-input:-ms-input-placeholder {
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: rgb(209 213 219) !important;
 }
 
-input::-ms-input-placeholder {
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
   /* Microsoft Edge */
   color: rgb(209 213 219) !important;
 }
