--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,11 @@ body {
   border-radius: 10px;
   opacity: 0.8;
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px;
+}
